--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,13 @@
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		
+  		<sonar.projectKey>bach-tran_sonarcloud-piratetesting</sonar.projectKey>
+  		<sonar.organization>bach-tran</sonar.organization>
+  		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 
+		<!-- This is something we added ourselves for Jacoco to provide Code Coverage reports -->
+		<!-- Jacoco is a Maven plugin that will be triggered when we do a Sonarcloud scan -->
 		<sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
 	</properties>
 
